Sanity check the values coming back from the int13 extensions of the bios, so we can catch impossible return values.  Allows the bootloader to work again on the Soekris net4501.

Fixes PR kern/46027.